Add multithreaded processing
